force-app/main/default/objects/Attendance_Capture__c/Attendance_Capture__c.object-meta.xml
<CustomObject>
    <label>Attendance Capture</label>
    <nameField>
        <displayFormat>AT{000000}</displayFormat>
        <label>Attendance Refference Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendance Capture</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>