force-app/main/default/objects/Attendance_Capture__c/fields/Capture_Date__c.field-meta.xml
<CustomField>
    <fullName>Capture_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Capture Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>