force-app/main/default/objects/Attendance_Capture__c/fields/checkuser1__c.field-meta.xml
<CustomField>
    <fullName>checkuser1__c</fullName>
    <formula>IF( DATEVALUE( Login_Date__c)  =  TODAY(), true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>checkuser1</label>
    <type>Checkbox</type>
</CustomField>