force-app/main/default/objects/Attendance_Capture__c/fields/Login_Date__c.field-meta.xml
<CustomField>
    <fullName>Login_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Login Time</label>
    <type>DateTime</type>
</CustomField>