force-app/main/default/objects/Attendance_Capture__c/fields/Logout_Date__c.field-meta.xml
<CustomField>
    <fullName>Logout_Date__c</fullName>
    <label>Logout Time</label>
    <type>DateTime</type>
</CustomField>